# royce

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  dev.env  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: V1__create_users_table.sql  V1__insert_user.sql
backend/src/: errors.rs  main.rs  utils.rs
backend/src/api/: middleware.rs  mod.rs  private.rs  public.rs  responses.rs
backend/src/auth/: backend.rs  mod.rs  sessions.rs
backend/src/database/: migration.rs  mod.rs  setup.rs
backend/src/database/models/: user.rs
frontend/: app.config.ts  package.json
frontend/src/: app.tsx  entry-client.tsx  entry-server.tsx  store.tsx
frontend/src/components/: Nav.tsx
frontend/src/routes/: [...404].tsx  index.tsx  login.tsx  private.tsx  register.tsx
frontend/src/utils/: helpers.tsx  logging.tsx  requests.tsx
