[package]
name = "royce"
version = "0.0.1"
authors = ["Jannis Schoepplenberg <jschoe@proton.me>"]
description = "Rust web server starter with API routes, PostegreSQL and auth."
keywords = []
categories = []
readme = "README.md"
license = "MIT"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie-private"] }
axum-login = "0.15.3"
axum-messages = "0.6.1"
bb8 = "0.8.5"
bb8-postgres = "0.8.1"
http = "1.1.0"
password-auth = "1.0.0"
refinery = { version = "0.8.14", features = ["tokio-postgres"] }
rmp-serde = "1.3.0"
serde = { version= "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.1" , features = ["full"] }
tokio-postgres = "0.7.11"
tokio-postgres-migration = "0.1.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "limit"] }
tower-sessions = { version = "0.12.2", features = ["private"] }
tower-sessions-core = "0.12.2"
tower-sessions-redis-store = "0.13.0"
tower_governor = "0.4.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
